Fixed minimum spacing issue for acknowledgement view page

--- a/app/styles/orders/acknowledgement/view.less
+++ b/app/styles/orders/acknowledgement/view.less
@@ -221,6 +221,8 @@
 			md-card{
 				margin:0;
 				max-height:3.5em;
+				min-height:3.5em;
+				
 				.transition(margin, 150ms);
 				.transition(max-height, 750ms);
 				.transition(all, 250ms);
