--- a/app/styles/orders/po/view.less
+++ b/app/styles/orders/po/view.less
@@ -207,6 +207,8 @@
 			md-card.po{
 				margin:0;
 				max-height:3.5em;
+				min-height:3.5em;
+				
 				.transition(margin, 150ms);
 				.transition(max-height, 750ms);
 				.transition(width, 150ms);				
